# estacao-iot-interativa-freertos

./: .gitignore  CMakeLists.txt  README.md
components/actuator_service/: CMakeLists.txt
components/actuator_service/include/: actuator_service.h
components/actuator_service/src/: actuator_service.c
components/alarm_service/: CMakeLists.txt
components/alarm_service/include/: alarm_service.h
components/alarm_service/src/: alarm_service.c
components/app_common/include/: app_types.h
components/app_config/: CMakeLists.txt
components/app_config/include/: app_config.h
components/app_config/src/: app_config.c
components/console_service/: CMakeLists.txt
components/console_service/include/: console_service.h
components/console_service/src/: console_service.c
components/display_service/: CMakeLists.txt
components/display_service/include/: display_service.h
components/display_service/src/: display_service.c
components/keypad_service/: CMakeLists.txt
components/keypad_service/include/: keypad_service.h
components/keypad_service/src/: keypad_service.c
components/mqtt_service/: CMakeLists.txt
components/mqtt_service/include/: mqtt_service.h
components/mqtt_service/src/: mqtt_service.c
components/sensor_service/: CMakeLists.txt
components/sensor_service/include/: sensor_service.h
components/storage_service/: CMakeLists.txt
components/time_service/: CMakeLists.txt
components/wifi_manager/: CMakeLists.txt
docs/: hardware-block-diagram.md  technical-report.md
main/: CMakeLists.txt  app_main.c
(+7 files in other folders)
